sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:18: error: not found: value j
        swap(j, j+1);
             ^AlgCocktailSort1:18: error: not found: value j
        swap(j, j+1);
                ^